# theatre_project

./: .gitignore  CLAUDE.md  DESIGN_SYSTEM.md  FILES_STRUCTURE.md  PROJECT_STATUS.md  README.md  claude_cli_integration.py  context_builder.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.development  flat_project_ver.py  night_orchestrator_v3_adaptive.py  result_analyzer.py  show_tree.py  start_night_v3.bat  task_manager.py
backend/: Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  TESTING_INFRASTRUCTURE_SUMMARY.md  alembic.ini  entrypoint.sh  pyproject.toml  pytest.ini
backend/alembic/: env.py  script_py.mako
backend/alembic/versions/: 20250101_0000_001_initial_initial_migration.py  20250101_0001_002_inventory_inventory_module.py  20250101_0001b_002b_performances_performances_module.py  20250101_0002_003_documents_documents_module.py  20250101_0003_004_schedule_schedule_module.py  20250116_0001_005_departments_venues.py  20250116_0002_006_add_fk_references.py  20250116_0003_007_inventory_photos.py  20250116_0004_008_performance_inventory.py  20250116_0005_009_inventory_physical_props.py  20250116_0006_010_documents_department.py  20250116_0007_011_checklists.py  20250117_0001_012_document_templates.py  20250117_0002_013_performance_documents.py  20250118_0001_014_performance_hub_schema.py  20250118_0002_015_analytics_tables.py  20250118_0003_016_inventory_enhancement.py  20250118_0100_017_schedule_recurrence.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: __init__.py  constants.py  exceptions.py  permissions.py  security.py
backend/app/database/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  analytics.py  checklist.py  department.py  document.py  document_template.py  inventory.py  inventory_photo.py  performance.py  performance_cast.py  performance_document.py  performance_inventory.py  schedule.py  theater.py  user.py  venue.py
backend/app/repositories/: __init__.py  base.py  department_repository.py  document_repository.py  inventory_repository.py  performance_repository.py  schedule_repository.py  template_repository.py  user_repository.py  venue_repository.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  base.py  checklist.py  checklist_hub.py  department.py  document.py  document_template.py  inventory.py  performance.py  performance_cast.py  performance_document.py  schedule.py  user.py  venue.py
backend/app/services/: __init__.py  analytics_service.py  auth_service.py  bulk_operations_service.py  conflict_detection_service.py  department_service.py  document_generation_service.py  document_service.py  document_tree_service.py  inventory_service.py  minio_service.py  passport_readiness_service.py  performance_document_service.py  performance_hub_service.py  performance_service.py  qr_code_service.py  recurrence_service.py  redis_service.py  resource_calendar_service.py  schedule_service.py  template_service.py  venue_service.py
backend/app/utils/: __init__.py
backend/scripts/: create_superuser.py  create_test_user.py  diagnostic.py  init-db.sql  init_db.py  seed_data.py
backend/tests/: QUICK_REFERENCE.md  README.md  __init__.py  conftest.py  conftest_backup.py  test_auth.py  test_inventory.py
backend/tests/integration/: BENCHMARK_README.md  TASK-6-COMPLETION-REPORT.md  test_auth_api.py  (+5 more)
(+315 files in other folders)
